salesforce_sfdx/main/default/objects/Application_Task_Model__c/fields/Application_Template__c.field-meta.xml
<CustomField>
    <fullName>Application_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Application Template</label>
    <referenceTo>vlocity_cmt__ApplicationTemplate__c</referenceTo>
    <relationshipLabel>Application Task Models</relationshipLabel>
    <relationshipName>Application_Task_Models</relationshipName>
    <type>Lookup</type>
</CustomField>