salesforce_sfdx/main/default/objects/Application_Task_Model__c/fields/Due_Date_Offset__c.field-meta.xml
<CustomField>
    <fullName>Due_Date_Offset__c</fullName>
    <label>Due Date Offset</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>