salesforce_sfdx/main/default/objects/Application_Task_Model__c/fields/Next_Application_Stage__c.field-meta.xml
<CustomField>
    <fullName>Next_Application_Stage__c</fullName>
    <label>Next Application Stage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>