salesforce_sfdx/main/default/objects/Application_Task_Model__c/fields/Preceding_Task__c.field-meta.xml
<CustomField>
    <fullName>Preceding_Task__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Preceding Task</label>
    <referenceTo>Application_Task_Model__c</referenceTo>
    <relationshipLabel>Child Tasks</relationshipLabel>
    <relationshipName>Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>