salesforce_sfdx/main/default/objects/Application_Task_Model__c/fields/Task_Execution_Order__c.field-meta.xml
<CustomField>
    <fullName>Task_Execution_Order__c</fullName>
    <label>Task Execution Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>