salesforce_sfdx/main/default/objects/Application_Task_Model__c/fields/Task_Number__c.field-meta.xml
<CustomField>
    <fullName>Task_Number__c</fullName>
    <label>Task Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>